[gd_scene load_steps=20 format=2]

[ext_resource path="res://Scripts/Levels/Control_Flow/5 - 2 Shape.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/RotateRight.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Interact.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Door.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/RotateLeft.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/Forward.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/TextBox.tscn" type="PackedScene" id=7]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Background.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/CallLoop.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/CodeBlockBar.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Robot.tscn" type="PackedScene" id=11]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/Grid.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/Level_Components/Puzzle_Elements/Button.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelControl.tscn" type="PackedScene" id=14]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/LevelClearedPopup.tscn" type="PackedScene" id=15]
[ext_resource path="res://Scenes/Level_Components/IDE_Elements/LoopBlock.tscn" type="PackedScene" id=16]
[ext_resource path="res://Scenes/Level_Components/Level_Elements/IDE.tscn" type="PackedScene" id=17]
[ext_resource path="res://Scenes/Level_Components/IDE_Elements/IfBlock.tscn" type="PackedScene" id=18]
[ext_resource path="res://Scenes/Level_Components/Code_Blocks/CallIf.tscn" type="PackedScene" id=21]

[node name="5 - 2 Shape" type="Node2D"]
script = ExtResource( 1 )

[node name="Background" parent="." instance=ExtResource( 8 )]

[node name="Grid" parent="." instance=ExtResource( 12 )]

[node name="Robot" parent="Grid" instance=ExtResource( 11 )]

[node name="Door" parent="Grid" instance=ExtResource( 4 )]

[node name="Button1" parent="Grid" instance=ExtResource( 13 )]

[node name="Level Control" parent="." instance=ExtResource( 14 )]

[node name="IDE" parent="." instance=ExtResource( 17 )]

[node name="Counter" parent="IDE/Main" index="4"]
maxBlocks = 2

[node name="Loop1" parent="IDE" instance=ExtResource( 16 )]
margin_top = 513.0
margin_bottom = 788.0

[node name="Counter" parent="IDE/Loop1/HighlightControl" index="3"]
maxBlocks = 2

[node name="ChooseLoopType" parent="IDE/Loop1/HighlightControl" index="5"]
focus_mode = 2

[node name="StepOperator" parent="IDE/Loop1/HighlightControl/ForConditional" index="6"]
focus_mode = 2

[node name="LHS" parent="IDE/Loop1/HighlightControl/WhileConditional" index="0"]
focus_mode = 2

[node name="Operator" parent="IDE/Loop1/HighlightControl/WhileConditional" index="1"]
focus_mode = 2

[node name="Loop2" parent="IDE" instance=ExtResource( 16 )]
margin_top = 792.0
margin_bottom = 1067.0

[node name="Counter" parent="IDE/Loop2/HighlightControl" index="3"]
maxBlocks = 1

[node name="If1" parent="IDE" instance=ExtResource( 18 )]
margin_top = 1071.0
margin_bottom = 1346.0

[node name="Counter" parent="IDE/If1/If" index="4"]
maxBlocks = 1

[node name="Counter" parent="IDE/If1/Else" index="4"]
maxBlocks = 1

[node name="CodeBlockBar" parent="." instance=ExtResource( 10 )]

[node name="Forward" parent="CodeBlockBar" instance=ExtResource( 6 )]

[node name="RotateLeft" parent="CodeBlockBar" instance=ExtResource( 5 )]

[node name="RotateRight" parent="CodeBlockBar" instance=ExtResource( 2 )]

[node name="Interact" parent="CodeBlockBar" instance=ExtResource( 3 )]

[node name="Call_Loop1" parent="CodeBlockBar" instance=ExtResource( 9 )]

[node name="Call_Loop2" parent="CodeBlockBar" instance=ExtResource( 9 )]

[node name="Call_If1" parent="CodeBlockBar" instance=ExtResource( 21 )]

[node name="TextBox" parent="." instance=ExtResource( 7 )]

[node name="PopupMenu" parent="." instance=ExtResource( 15 )]

[editable path="IDE"]
[editable path="IDE/Main"]
[editable path="IDE/Loop1"]
[editable path="IDE/Loop2"]
[editable path="IDE/If1"]
